test/parse-fail/call-positional-after-keyword.as
function(x=10, 60);
